--- a/esercitazione_11_12/public/CB125R.html
+++ b/esercitazione_11_12/public/CB125R.html
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/CB650R">CB650R</a>
+            <a class="nav-link" href="/CBR600R">CBR600R</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/CB125R">CB125R</a>
@@ -39,16 +39,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HONDA</title>
+  <title>CBR600R</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="card">
-      <img src="https://wallpapercave.com/wp/wp4823015.jpg" class="card-img-top" alt="HONDA Image">
+      <img src="https://wallpapercave.com/wp/wp4823010.jpg" class="card-img-top" alt="CBR600R Image">
       <div class="card-body">
-        <h5 class="card-title">HONDA</h5>
-        <p class="card-text">Cavalli: 15 CV</p>
+        <h5 class="card-title">CBR600R</h5>
+        <p class="card-text">Cavalli: 15,0 CV</p>
         <p class="card-text">Velocità massima: 105 km/h</p>
         <p class="card-text">Cilindrata: 124,9 cc</p>
         <p class="card-text">Prezzo: € 4.490,00</p>
@@ -60,4 +60,3 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
