--- a/esercitazione_11_12/public/index.html
+++ b/esercitazione_11_12/public/index.html
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/CB650R">CB650R</a>
+            <a class="nav-link" href="/CBR600R">CBR600R</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/CB125R">CB125R</a>
@@ -27,9 +27,24 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Aggiunta della foto e dei contatti -->
+    <div class="jumbotron mt-4">
+      <h1 class="display-4">Benvenuto al nostro sito!</h1>
+      <p class="lead">Esplora la nostra gamma di motociclette HONDA.</p>
+      <hr class="my-4">
+      <img src="https://photos.worldsbk.com/2022/09/13/00112_dcp_r7_ambience_full.jpg" class="img-fluid" alt="Home Image">
+      <p class="mt-4">Per ulteriori informazioni, contattaci:</p>
+      <ul>
+        <li>Email: gnani.luca@iisgalvanimi.edu.it</li>
+        <li>Telefono: +1234567890</li>
+      </ul>
+    </div>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
