--- a/esercitazione_11_12/public/CB1000R.html
+++ b/esercitazione_11_12/public/CB1000R.html
@@ -47,7 +47,7 @@
     <div class="card">
       <img src="https://i.pinimg.com/originals/a1/85/07/a18507a95cab33b13cdbf00c88b672b1.jpg" class="card-img-top" alt="CBR600R Image">
       <div class="card-body">
-        <h5 class="card-title">CBR600R</h5>
+        <h5 class="card-title">CB1000R</h5>
         <p class="card-text">Cavalli: 145,0 CV</p>
         <p class="card-text">Velocità massima: 299 km/h</p>
         <p class="card-text">Cilindrata: 998,0 cc</p>
