--- a/esercitazione_11_12/public/CB125R.html
+++ b/esercitazione_11_12/public/CB125R.html
@@ -47,7 +47,7 @@
     <div class="card">
       <img src="https://wallpapercave.com/wp/wp4823010.jpg" class="card-img-top" alt="CBR600R Image">
       <div class="card-body">
-        <h5 class="card-title">CBR600R</h5>
+        <h5 class="card-title">CB125R</h5>
         <p class="card-text">Cavalli: 15,0 CV</p>
         <p class="card-text">Velocità massima: 105 km/h</p>
         <p class="card-text">Cilindrata: 124,9 cc</p>
