--- a/esercitazione_11_12/public/index.html
+++ b/esercitazione_11_12/public/index.html
@@ -30,7 +30,7 @@
 
     <!-- Aggiunta della foto e dei contatti -->
     <div class="jumbotron mt-4">
-      <h1 class="display-4">Benvenuto al nostro sito!</h1>
+      <h1 class="display-4">Benvenuto sul nostro sito!</h1>
       <p class="lead">Esplora la nostra gamma di motociclette HONDA.</p>
       <hr class="my-4">
       <img src="https://photos.worldsbk.com/2022/09/13/00112_dcp_r7_ambience_full.jpg" class="img-fluid" alt="Home Image">
